Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/multicatch/Neg01eff_final.out
Neg01eff_final.java:22:19: compiler.err.except.never.thrown.in.try: Neg01eff_final.B2
1 error
